= 0.4.3 / 2011-09-12

  * Added redirect module.

  * Added Mapper.run and Router.run to mimic Builder.run.

= 0.4.2 / 2011-09-10

  * Added get/post/put/del/head/options convenience functions to Router/Builder.

  * Added access to miscellaneous internal modules (e.g. mime, mock).

  * Request.parseableData returns true when Request.formData is true.

  * Better examples.

= 0.4.1 / 2011-09-09

  * Added jsonp support.

  * Refactored mock.request and entire test suite.

  * Set proper Content-Encoding in gzip middleware.

= 0.4 / 2011-09-09

  * Renamed project from link to strata.

  * Added support for Accept* family of HTTP headers.

  * Added gzip support (requires node-compress).

= 0.3.3 / 2011-09-02

  * Added link.run.

  * Builder defaults to returning a 404.

  * Fixed a bug that didn't allow authBasic to be required automatically.

  * Added CHANGES document.

= 0.3.2 / 2011-08-17

  * Reorganized package structure.

  * Fixed sessionCookie bug that did not call the downstream app in some cases.

  * Changed minimum node requirement to 0.4.7.

= 0.3.0 / 2011-08-16

  * Added Router middleware.

  * Replaced urlMap middleware with Mapper.

  * Changed minimum node requirement to 0.4.10.