@@ -267,6 +267,7 @@ var propPaths = {
     "sessionCookie": "session/cookie",
     "static": "static",
     // Other
+    "examples": "examples",
     "mime": "mime",
     "mock": "mock",
     "multipart": "multipart",
