@@ -1,3 +1,7 @@
+= HEAD
+
+  * Added examples module.
+
 = 0.4.3 / 2011-09-12
 
   * Added redirect module.
